New Background in 4SICLE.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Simon_Says</string>
+    <string name="app_name">Mr Popsy.</string>
 
     <string name="title_activity_hooser">hooser</string>
     <string name="dummy_button">Dummy Button</string>
