--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,29 @@
 <resources>
-    <string name="app_name">Mr Popsy.</string>
+    <!--
+This file is part of Icemon Says
+Icemon Says is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+-->
+    <string name="app_name">Icemon Says</string>
 
     <string name="title_activity_hooser">hooser</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="info">¿?</string>
+    <string name="autors">AUTORES</string>
+    <string name="javier">Javier Romero Sánchez.</string>
+    <string name="javgit">https://github.com/Javrom95</string>
+    <string name="matias">Matías Ramírez Cobreros.</string>
+    <string name="matgit">https://github.com/matirc</string>
 </resources>
